# DeepRX

./: .gitignore  README.md  pyproject.toml  requirements-cuda.txt
config/: deeprx_paths.json
docs/: reproduction_prereq_audit.md
docs/assets/: figure6a_30k_mc100_metrics.json  figure6a_30k_mc500_metrics.json
docs/superpowers/plans/: 2026-07-16-figure6a-whole-band-snr.md
docs/superpowers/specs/: 2026-07-16-figure6a-whole-band-snr-design.md
matlab/: deeprx_build_paper_sim_parameters.m  deeprx_evaluate_known_channel_lmmse.m  deeprx_evaluate_practical_lmmse.m  deeprx_evaluate_pytorch_deeprx.m  deeprx_export_official_batch.m  hGetAdditionalSystemParameters.m  hGetFeaturesAndLabels.m  requirements_6GVerify_project.txt
official/: deeprx.py  deeprx_model.py  hCreateTorchDeepRx.m  helperLibraryChecker.m  helperSetupPyenv.m  helperinstalledlibs.py
scripts/: build_training_cache.py  check_prereqs.py  evaluate_checkpoint.py  quick_reproduce.py  replot_figure6a.py  reproduce_figure6a.py  train_official_matlab.py  train_paper_config.py
src/deeprx/: __init__.py  config.py  data.py  experiments.py  matlab_bridge.py  model.py  ofdm.py  official_experiments.py  qam.py  receiver.py  training_cache.py
tests/: test_check_prereqs.py  test_matlab_bridge.py  test_model.py  test_official_experiments.py  test_pipeline.py  test_signal_chain.py  test_training_cache.py  test_training_script.py  test_workspace_layout.py
